--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,8 @@ language: node_js
 dist: trusty
 branches:
   - main
-  sudo apt-get install -y sshpass
+
+install:
+  - sudo apt-get install -y sshpass
+
 script: bash ./deploy.sh
